# cppcartoon

./: CMakeLists.txt  FindNumpy.py  README.md  cartoonize.py  install_name_tool.sh
src/: cartoon.cpp  cppcartoon.cpp
src/python/: pyboost_cv2_converter.cpp  pyboost_cv3_converter.cpp  pyboostcvconverter.hpp  python.cpp
